# pycololight

./: .gitignore  CHANGELOG.md  Dockerfile.dev  LICENSE  MODES.md  README.md  pyproject.toml
.buildkite/: pipeline.yml
.devcontainer/: devcontainer.json
pycololight/: __init__.py  constants.py  effects.py  pycololight.py
scripts/: build.sh  release_gh.sh
tests/: test_effects.py  test_pycololight.py
